PloneArticle Changes
====================

4.2.0 (plone-4-support svn branch)
----------------------------------

* Archetypes tool stopped providing getObject(uuid) method, using reference_catalog
  instead [glenfant]

* Resync plone4 branch with trunk [kiorky]

* Fix setupKupu if resources are not there, just warn [kiorky]

* Fixed widget templates for Plone 4 [tdesvenain]

* Added upgrade script 4.1.9 -> 4.1.10
  [glenfant]

* Make fake DC "Subject" methods to inner types such they don't get this
  with acquisition.
  [glenfant]

* Commented out isinstance checks in fileinnercontentproxy and
  imageinnercontentproxy. they break functionality when plone.app.blob is used.
  [rnix]

* Updated registerType calls for Plone 4 support [vangheem]

* Updated page templates for Plone 4 support [vangheem] [tdesvenain]

* Remove duplicate attributes in pa_model_macros.pt: chameleon don't like that.
  [kdeldycke] 2010-04-14


4.1.9
-----

* Set "content-disposition" header for files as in ATFile
  [glenfant]

4.1.8
-----

* Fixed too restrictive security issue : anonymous users couldn't see embedded
  images/files. See issue #35
  [glenfant]

4.1.7
-----

* Show only attachments and images available to the user such an
  anonymous user is not rejected when viewing a public article that
  references a private file.
  http://plone.org/products/plonearticle/issues/34
  [glenfant]

4.1.6
-----

* Fixed packaging error (only .py files in the egg)
  [glenfant]

* Added mising (empty) migration paths.

* Doc errors found and fixed.

4.1.5
-----

* Fix pa_browser url : url is no more depending on base href
  [macadames] 2009-06-05

* Fix ajax images player launched to soon sometimes
  $document.ready replaced by $window.load
  [macadames] 2009-09-04

* Fix jQuery syntax (tag[@attribute=value] replaced by tag[attribute=value])
  (perhaps a new version of jquery.js used in Plone 3.3 ?)
  [macadames] 2009-09-04

4.1.4
-----

* Identical release (egg generation failed)
  [glenfant]
